grafana/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dash.mtaha.dev`)
      priority: 10
      services:
        - kind: Service
          name: grafana
          namespace: grafana-k8s
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    domains:
      - main: dash.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
